--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="error.css">
 </head>
 <body>
-        <h1>Waha pe thoda hua codee bigad gaya hai </h1>
+        <h1>Waha pe thoda hua code bigad gaya hai </h1>
         <p class="zoom-area">
             <b>ye Meet Mendapara ka Project hai</b><br>
             dard samaj sakte hai aap <br>
